webmaster tools verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_favicon.png"/>
   <script src="/javascripts/scale.fix.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="qFCyu9Xc3z0V-wyxibS32Hk4h9RDVFWe9Aza-5c4JY8" />
   {% if page.description %}
     <meta name="description" content="{{ page.description }}" />
   {% elsif page.category == 'radio' %}
