--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body>
+  <body vocab="http://schema.org/" typeof="CreativeWork">
     {% include scm.html %}
     <div class="wrapper">
       {% include header.html %}
