create title div

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <header vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="{{ site.url }}{{ page.url }}#author">
   <hgroup>
-  <h1 class="default"><a href="/index.html" title="Recent Transmissions"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
+  <div>
+  <img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" />
+  <h1 class="default"><a href="/index.html" title="Recent Transmissions"> DR3WH0</a></h1>
+  </div>
   <h3>Time Travel &amp; Other Anomalies</h3>
   <nav>
   <p class="view"><a href="/archive.html" title="Thought Archive">Thoughts<small>&nbsp;-&nbsp;the master list</small></a></p>
