--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,10 @@
     <meta name="description" content="Time Travel & Other Anomalies." />
   {% endif %}
 
+  <span typeof="http://schema.org/CreativeWork" resource="{{ site.url }}{{ page.url }}">
+
   <!-- RDFa Dublin Core Metadata -->
-  <span vocab="http://purl.org/dc/terms/" resource="{{ site.url }}{{ page.url }}#dc">
+  <span vocab="http://purl.org/dc/terms/">
   <meta property="creator rightsHolder" content="DR3WH0" resource="{{ site.url }}{{ page.url }}#author" />
   <meta property="language" content="en" />
   {% if page.title %}<meta property="title" content="{{ page.title }}" />{% endif %}
@@ -52,7 +54,7 @@
   </span>
 
   <!-- Open Graph Metadata -->
-  <span vocab="http://ogp.me/ns#" resource="{{ site.url }}{{ page.url }}#ogp">
+  <span vocab="http://ogp.me/ns#">
   <meta property="site_name" content="DR3WH0: Time Travel & Other Anomalies" />
   {% if page.title %}<meta property="title" content="{{ page.title }}" />{% endif %}
   {% if page.description %}<meta property="description" content="{{ page.description }}" />
@@ -63,5 +65,6 @@
   {% else %}
     <meta property="description" content="A photo/poetry/music blog by DR3WH0." />
   {% endif %}
+  </span>
   </span>
 </head>
