--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
   </span>
 </article>
 
-<p style="text-align:right"><small><a href="/guestbook.html"><b>COMMENTS >>></b></a></small></p>
+<!--<p style="text-align:right"><small><a href="/guestbook.html"><b>COMMENTS >>></b></a></small></p>-->
 <hr/>
 
 {% include JB/setup %}
