--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,8 @@
   <p class="view"><a href="/radio.html" title="Radio Archive">Radio<small>&nbsp;-&nbsp;favorite tunes</small></a></p>
   <p class="view"><a href="/categories.html" title="Category List">Categories<small>&nbsp;-&nbsp;data herds</small></a></p>
   <p class="view"><a href="/tags.html" title="Tag List">Tags<small>&nbsp;-&nbsp;idea graffiti</small></a></p>
-  <p class="view"><a property="account" href="http://about.me/DR3WH0" title="DR3WH0: about.me" target="tab">DR3WH0<small>&nbsp;-&nbsp;about.me</small></a></p>
+  <p class="view"><a property="account" href="http://dr3wh0.tumblr.com" title="DR3WH0: Tumblr" target="tab">Tumblr<small>&nbsp;-&nbsp;photo</small></a></p>
+  <p class="view"><a property="account" href="https://twitter.com/DR3WH0" title="DR3WH0: Twitter" target="tab">Twitter<small>&nbsp;-&nbsp;stream</small></a></p>
   </nav>
   </hgroup>
 </header>
