--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
   <p class="view"><a href="/categories.html" title="Category List">Categories<small>&nbsp;-&nbsp;data herds</small></a></p>
   <p class="view"><a href="/tags.html" title="Tag List">Tags<small>&nbsp;-&nbsp;idea graffiti</small></a></p>
   <p class="view"><a property="account" href="http://dr3wh0.tumblr.com" title="DR3WH0: Tumblr" target="tab">Tumblr<small>&nbsp;-&nbsp;photo tree</small></a></p>
-  <p class="view"><a property="account" href="https://twitter.com/DR3WH0" title="DR3WH0: Twitter" target="tab">Twitter<small>&nbsp;-&nbsp;idea stream</small></a></p>
+  <p class="view"><a property="account" href="https://twitter.com/DR3WH0" title="DR3WH0: Twitter" target="tab">Twitter<small>&nbsp;-&nbsp;time stream</small></a></p>
   </nav>
   </hgroup>
 </header>
