--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
   <h1 class="default"><a href="/index.html" title="Recent Transmissions"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
   <h3>Time Travel &amp; Other Anomalies</h3>
   <nav>
-  <p class="view"><a href="/archive.html" title="Thought Archive">Thoughts<small>&nbsp;-&nbsp;the master list</small></a></p>
-  <p class="view"><a href="/radio.html" title="Radio Archive">Radio<small>&nbsp;-&nbsp;favorite tunes</small></a></p>
+  <p class="view"><a href="/archive.html" title="Thought Archive">Archive<small>&nbsp;-&nbsp;the master list</small></a></p>
+  <!--<p class="view"><a href="/radio.html" title="Radio Archive">Radio<small>&nbsp;-&nbsp;favorite tunes</small></a></p>-->
   <p class="view"><a href="/categories.html" title="Category List">Categories<small>&nbsp;-&nbsp;data herds</small></a></p>
   <p class="view"><a href="/tags.html" title="Tag List">Tags<small>&nbsp;-&nbsp;idea graffiti</small></a></p>
   <p class="view"><a property="account" href="http://dr3wh0.tumblr.com" title="DR3WH0: Tumblr" target="tab">Tumblr<small>&nbsp;-&nbsp;photo tree</small></a></p>
