--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,12 @@
   <meta name="keywords" content="Prose, Poetry, Photography, Music" />
   <title>DR3WH0{% if page.title %} | {{ page.title }}{% endif %}</title>
   <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css" media="screen" charset="utf-8"/>
-  <link rel="icon" type="image/png" href="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_favicon.png"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
   <script src="/javascripts/scale.fix.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="qFCyu9Xc3z0V-wyxibS32Hk4h9RDVFWe9Aza-5c4JY8" />
