--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
   <h1 class="default"><a href="/index.html" title="Recent Transmissions"><img src="/favicon-32x32.png" alt="DR3WH0.png" height="32" width="32" /> DR3WH0</a></h1>
   <h3>Time Travel &amp; Other Anomalies</h3>
   <nav>
-  <p class="view"><a href="/archive.html" title="Thought Archive">Archive<small>&nbsp;-&nbsp;the master list</small></a></p>
+  <p class="view"><a href="/archive.html" title="Thought Archive">Archive<small>&nbsp;-&nbsp;thought tree</small></a></p>
   <!--<p class="view"><a href="/radio.html" title="Radio Archive">Radio<small>&nbsp;-&nbsp;favorite tunes</small></a></p>-->
-  <p class="view"><a href="/categories.html" title="Category List">Categories<small>&nbsp;-&nbsp;data herds</small></a></p>
+  <p class="view"><a href="/categories.html" title="Category List">Categories<small>&nbsp;-&nbsp;concept herds</small></a></p>
   <p class="view"><a href="/tags.html" title="Tag List">Tags<small>&nbsp;-&nbsp;idea graffiti</small></a></p>
-  <p class="view"><a property="account" href="http://dr3wh0.tumblr.com" title="DR3WH0: Tumblr" target="tab">Tumblr<small>&nbsp;-&nbsp;image tree</small></a></p>
+  <!-- <p class="view"><a property="account" href="http://dr3wh0.tumblr.com" title="DR3WH0: Tumblr" target="tab">Tumblr<small>&nbsp;-&nbsp;image tree</small></a></p> -->
   <p class="view"><a property="account" href="https://twitter.com/DR3WH0" title="DR3WH0: Twitter" target="tab">Twitter<small>&nbsp;-&nbsp;time stream</small></a></p>
   </nav>
   </hgroup>
