--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <html>
   {% include head.html %}
   <body vocab="http://schema.org/">
+    <!-- {% include scm.html %} -->
     <div class="wrapper">
       {% include header.html %}
       <section id="main" typeof="CreativeWork" resource="{{ site.url }}{{ page.url }}#schema">
