--- a/_includes/scm.html
+++ b/_includes/scm.html
@@ -1,4 +1,4 @@
 <!-- SCM Music Player http://scmplayer.net -->
     <script type="text/javascript" src="http://dr3wh0.net/musicplayer/script.js"
-    data-config="{'skin':'http://static.tumblr.com/utpfya5/M9Xn2m9im/skinfolha.css','volume':42,'autoplay':false,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{% for track in site.tracks %}{'title':'{{ track.name }}','url':'{{ track.url }}'}{% unless forloop.last %},{% endunless %}{% endfor %}]}" ></script>
+    data-config="{'skin':'http://static.tumblr.com/utpfya5/M9Xn2m9im/skinfolha.css','volume':42,'autoplay':false,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{% for track in site.tracks %}{'title':'{{ track.name }}','url':'{{ track.url }}'}{% unless forloop.last %},{% endunless %}{% endfor %}]}" ></script>
 <!-- SCM Music Player script end -->
